--- a/user-mgmt-frontend/package.json
+++ b/user-mgmt-frontend/package.json
@@ -13,13 +13,16 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
     "primeflex": "^3.3.1",
     "primereact": "^9.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-hook-form": "^7.45.1",
+    "react-router-dom": "^6.14.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
